@@ -75,7 +75,9 @@ class OverallStatsReport extends Report {
 		$html .= '</li>';
 		$html .= '<li>First query: '.$this->formatTimestamp($statsListener->getFirstQueryTimestamp()).'</li>';
 		$html .= '<li>Last query: '.$this->formatTimestamp($statsListener->getLastQueryTimestamp()).'</li>';
-		$html .= '<li>Query peak: '.$this->formatInteger($statsListener->getQueryPeakQueryCount()).' queries/s at '.$this->formatTimestamp($statsListener->getQueryPeakTimestamp()).'</li>';
+		$peakTimestamps = $statsListener->getQueryPeakTimestamps();
+		array_walk($peakTimestamps, array(&$this, 'walkFormatTimestamp'));
+		$html .= '<li>Query peak: '.$this->formatInteger($statsListener->getQueryPeakQueryCount()).' queries/s at '.implode(', ', $peakTimestamps).'</li>';
 		if($errorCountersListener) {
 			$html .= '<li>Number of errors: '.$this->formatInteger($errorCountersListener->getErrorCount()).'</li>';
 			if($normalizedErrorsListener) {
@@ -85,6 +87,10 @@ class OverallStatsReport extends Report {
 		$html .= '</ul>';
 		
 		return $html;
+	}
+	
+	function walkFormatTimestamp(& $value, $key) {
+		$value = $this->formatTimestamp($value);
 	}
 }
 
